# MinecraftServerTools

./: .ignore  README.md  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/services/: file.rs  server.rs
src-tauri/src/status/: server.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/header/: index.tsx
src/app/components/making/: index.tsx
src/app/components/select/: index.tsx  input.tsx  selectFile.tsx
src/app/tabs/server/: index.tsx
src/app/tabs/server/components/: beginning.tsx
src/app/types/: propes.ts
