[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = ["api-all"] }
window-shadows = "0.2.2"
#"window-set-closable", "window-set-icon", "window-set-position", "window-print", "window-set-fullscreen", "window-center", "window-set-decorations", "window-set-cursor-icon", "window-close", "window-set-min-size", "window-create", "window-unmaximize", "window-set-max-size", "window-set-content-protected", "window-set-cursor-visible", "window-set-cursor-grab", "window-set-always-on-top", "window-unminimize", "window-set-size", "window-request-user-attention", "window-set-cursor-position", "window-set-resizable", "window-hide", "window-set-title", "window-set-focus", "window-set-minimizable", "window-set-ignore-cursor-events", "window-show", "window-minimize", "window-maximize", "window-start-dragging", "window-set-maximizable", "window-set-skip-taskbar"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
